--- a/app/assets/javascripts/discourse/tests/index.html
+++ b/app/assets/javascripts/discourse/tests/index.html
@@ -52,8 +52,13 @@
     <script src="{{rootURL}}assets/discourse-markdown.js"></script>
     <script src="{{rootURL}}assets/discourse/tests/core_plugins_tests.js"></script>
     <script src="{{rootURL}}assets/admin.js"></script>
+    <script src="{{rootURL}}assets/test-helpers.js"></script>
     <script src="{{rootURL}}assets/tests.js"></script>
+    <script>
+      require('discourse/tests/test-boot-ember-cli');
+    </script>
     <script src="{{rootURL}}assets/scripts/discourse-boot.js"></script>
+
 
     {{content-for "body-footer"}}
     {{content-for "test-body-footer"}}
