--- a/app/assets/javascripts/discourse/tests/index.html
+++ b/app/assets/javascripts/discourse/tests/index.html
@@ -53,7 +53,7 @@
     <script src="{{rootURL}}assets/discourse/tests/active-plugins.js"></script>
     <script src="{{rootURL}}assets/admin.js"></script>
     <script src="{{rootURL}}assets/test-helpers.js"></script>
-    <script src="{{rootURL}}assets/tests.js"></script>
+    <script src="{{rootURL}}assets/core-tests.js"></script>
     <script src="{{rootURL}}assets/discourse/tests/plugin-tests.js"></script>
     <script>
       require('discourse/tests/test-boot-ember-cli');
